2008-12-30  John Dallaway  <john@dallaway.org.uk>

	* cdl/i2c_mcf52xx.cdl: Reference per-package documentation.

2006-02-28  Bart Veer  <bartv@ecoscentric.com>

	* doc/mcf52xx_i2c.sgml, include/i2c_mcf52xx.h: new files

	* src/i2c_mcf52xx.c, cdl/i2c_mcf52xx.cdl: various clean-ups

2005-10-23  Uwe Kindler  <uwe_kindler@web.de>

	* mcf52xx I2C driver package created

//===========================================================================
// ####GPLCOPYRIGHTBEGIN####                                                
// -------------------------------------------                              
// This file is part of eCos, the Embedded Configurable Operating System.   
// Copyright (C) 2005, 2006 Free Software Foundation, Inc.                  
//
// This program is free software; you can redistribute it and/or modify     
// it under the terms of the GNU General Public License as published by     
// the Free Software Foundation; either version 2 or (at your option) any   
// later version.                                                           
//
// This program is distributed in the hope that it will be useful, but      
// WITHOUT ANY WARRANTY; without even the implied warranty of               
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU        
// General Public License for more details.                                 
//
// You should have received a copy of the GNU General Public License        
// along with this program; if not, write to the                            
// Free Software Foundation, Inc., 51 Franklin Street,                      
// Fifth Floor, Boston, MA  02110-1301, USA.                                
// -------------------------------------------                              
// ####GPLCOPYRIGHTEND####                                                  
//===========================================================================